2014-02-09  Lars Ingebrigtsen  <larsi@gnus.org>

	* help.el (describe-bindings): Doc fix (bug#9888).

	* files.el (save-buffer): Use ARG as the parameter name for
	consistency (bug#10346).
	(save-buffer): Clarify the 0 argument (bug#10346).

	* cus-edit.el (customize-apropos): Fix error string.
	(custom-buffer-create): Doc fix (bug#11122).
	(custom-sort-items): Doc fix (bug#11121).

	* dired-aux.el (dired-copy-file-recursive): Remove slighly
	misleading comment (bug#11328).

	* repeat.el (repeat-message-function): Reword doc slightly (bug#11619).

	* icomplete.el (icomplete-with-completion-tables): Doc fix (bug#11654).
	(icomplete-simple-completing-p): Mention the previous variable.

	* font-lock.el (font-lock-value-in-major-mode): Clarify the
	meaning of the parameter (bug#12282).

	* files.el (find-file-noselect): Clarify prompt when changing
	readedness (bug#13261).
	(locate-file): Suffixes aren't returned, so don't say that they
	are (bug#12674).
	(backup-inhibited): Doc clarification (bug#12525).

	* dired.el (dired-internal-do-deletions): Don't say "Deleting..."
	before we actually start to delete things (bug#16331).

	* subr.el (event-start): Doc fix (bug#14228).
	(event-end): Ditto.

2014-02-09  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/warnings.el (lwarn):
	Empower help-enable-auto-load.  (Bug#15940)

2014-02-08  Andreas Schwab  <schwab@linux-m68k.org>

	* vc/log-edit.el (log-edit-comment-to-change-log): Doc fix.
	(Bug#16690)

2014-02-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-sh-handle-start-file-process):
	Insert output at end of buffer.  (Bug#16120)

2014-02-08  Lars Ingebrigtsen  <larsi@gnus.org>

	* simple.el (choose-completion-string-functions): Document new
	calling convention (bug#14153).
	(execute-extended-command): Clarify doc string (bug#13373).

	* kmacro.el (kmacro-exec-ring-item): Doc fix (bug#14198).

	* find-dired.el (find-name-dired): Doc fix (bug#14290).
	(find-grep-dired): Doc fix (bug#14288).
